// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should grey out icon when disabled 1`] = `
.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  height: 40px;
  width: 40px;
  padding: 12px;
  pointer-events: none;
}

.circuit-1 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-1:focus,
.circuit-1:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

<div
  class="circuit-3 circuit-4"
  disabled=""
>
  <div
    class="circuit-0"
  >
    search.svg
  </div>
  <input
    aria-invalid="false"
    class="circuit-1 circuit-2"
    disabled=""
    type="text"
    value=""
  />
</div>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  height: 40px;
  width: 40px;
  padding: 12px;
  pointer-events: none;
}

.circuit-1 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-1:focus,
.circuit-1:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<div
  class="circuit-3 circuit-4"
>
  <div
    class="circuit-0"
  >
    search.svg
  </div>
  <input
    aria-invalid="false"
    class="circuit-1 circuit-2"
    type="text"
    value=""
  />
</div>
`;
